CLEANUP: add braces around single-line 'if' statement